# krecstream

./: README.md  krecstream-dbus.py
plasmoid_src/: CMakeLists.txt  install.sh
plasmoid_src/krecstream_plasmoid/: metadata.desktop
plasmoid_src/krecstream_plasmoid/contents/mod/: project.pro  qmldir  x.py
plasmoid_src/krecstream_plasmoid/contents/ui/: main.qml  x.sh
